# rudo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  update.sh
src/: auth.rs  main.rs  session.rs  settings.rs
src/auth/: mod.rs  pam.rs  touchid.rs
src/osutils/: mod.rs  unix.rs
src/pamwrapper/: pamwrapper.c
