[package]
name = "rudo"
version = "0.2.0"
authors = ["shawnanastasio"]
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
# Required
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
getopts = "0.2.17"
libc = "0.2.23"
time = "0.1.39"

# Optional, per-OS
rpassword = { version = "2.0.0", optional = true }
users = { version = "0.6.0", optional = true }

[features]
default = ["pam"]

# AUTHENTICATION FRAMEWORKS
pam = ["unix", "rpassword"]
touchid = ["unix", "pam"]

# OS ABSTRACTION LAYERS
unix = ["users"]
