[package]
name = "rudo"
version = "0.2.0"
authors = ["shawnanastasio"]
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
# Required
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
getopts = "0.2.17"
libc = "0.2.23"
time = "0.1.39"
termion = "1.5.1"

# Optional, per-OS
users = { version = "0.6.0", optional = true }

[features]
default = ["unix_default"]

# TARGETS (call cargo --feature on these)
unix_default = ["unix", "pam"]
macos_extra = ["unix", "pam", "touchid"]

# AUTHENTICATION FRAMEWORKS
pam = ["unix"]
touchid = ["unix"]

# OS ABSTRACTION LAYERS
unix = ["users"]
